adjust swagger comment
