# docs/swagger.json
@@ -16,6 +16,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Images"
+                ],
                 "summary": "List images",
                 "operationId": "list-images",
                 "parameters": [
@@ -53,6 +56,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Images"
                 ],
                 "summary": "Mark an image",
                 "operationId": "mark-image",
